Remove background_view from MessageView.

MessageView had |background_view_| in order to just change paint
ordering of Background and Border. It caused focus painter not to be
painted in the right order. We no longer have shadow borders so we
don't have to change the paint ordering.

TEST=manual
BUG=877939

Change-Id: I226701e680b38920edc5ff34fa1cb6b19ef93ad3
Reviewed-on: https://chromium-review.googlesource.com/1195297
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588021}
Former-commit-id: 14cb873774626f8b34aa28777f3ed913d6d91a32