ui/message_center/views/message_view.h
@@ -113,7 +113,6 @@ class MESSAGE_CENTER_EXPORT MessageView : public views::InkDropHostView,
   void OnPaint(gfx::Canvas* canvas) override;
   void OnFocus() override;
   void OnBlur() override;
-  void Layout() override;
   void OnGestureEvent(ui::GestureEvent* event) override;
   const char* GetClassName() const final;
 
@@ -142,11 +141,9 @@ class MESSAGE_CENTER_EXPORT MessageView : public views::InkDropHostView,
   // it is on top of other views.
   void CreateOrUpdateCloseButtonView(const Notification& notification);
 
-  // Changes the background color being used by |background_view_| and schedules
-  // a paint.
+  // Changes the background color and schedules a paint.
   virtual void SetDrawBackgroundAsActive(bool active);
 
-  views::View* background_view() { return background_view_; }
   views::ScrollView* scroller() { return scroller_; }
 
   bool is_nested() const { return is_nested_; }
@@ -158,7 +155,6 @@ class MESSAGE_CENTER_EXPORT MessageView : public views::InkDropHostView,
   SlideOutController::SlideMode CalculateSlideMode() const;
 
   std::string notification_id_;
-  views::View* background_view_ = nullptr;  // Owned by views hierarchy.
   views::ScrollView* scroller_ = nullptr;
 
   base::string16 accessible_name_;
